// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`yes-version-no-tabs > gets all urls from docs config 1`] = `
[
  "docs/api/section-1/page-1",
  "docs/api/page-2",
  "docs/api/section-2",
  "docs/api/section-2/page-4",
  "docs/api/page-5",
  "docs/api/version-1",
  "docs/api/version-1/section-1/page-1",
  "docs/api/version-1/page-2",
  "docs/api/version-1/section-2",
  "docs/api/version-1/section-2/page-4",
  "docs/api/version-1/page-5",
  "docs/api/version-1/version-1",
  "docs/api/version-2/page-7",
  "docs/api/version-2/page-8",
  "docs/api/version-2/version-1",
  "docs/api/version-2/section-5/page-10",
]
`;

exports[`yes-version-no-tabs > gets navigation root for /docs/api 1`] = `
{
  "redirect": "docs/api/section-1/page-1",
  "type": "redirect",
}
`;

exports[`yes-version-no-tabs > gets navigation root for /docs/api/page-5 1`] = `
{
  "canonicalSlug": "docs/api/version-1/page-5",
  "id": "root..version-1.uv.section-3.page-5",
  "pageId": "page-5.md",
  "slug": "docs/api/page-5",
  "title": "Page 5",
  "type": "page",
}
`;

exports[`yes-version-no-tabs > gets navigation root for /docs/api/page-5 2`] = `"Version 1"`;

exports[`yes-version-no-tabs > gets navigation root for /docs/api/page-5 3`] = `undefined`;

exports[`yes-version-no-tabs > gets navigation root for /docs/api/section-1 1`] = `
{
  "redirect": "docs/api/section-1/page-1",
  "type": "redirect",
}
`;

exports[`yes-version-no-tabs > gets navigation root for /docs/api/version-1 1`] = `
{
  "canonicalSlug": "docs/api/version-1/version-1",
  "id": "root..version-1.uv.section-3.page-6",
  "pageId": "page-6.md",
  "slug": "docs/api/version-1",
  "title": "Page 6",
  "type": "page",
}
`;

exports[`yes-version-no-tabs > gets navigation root for /docs/api/version-1 2`] = `"Version 1"`;

exports[`yes-version-no-tabs > gets navigation root for /docs/api/version-1 3`] = `undefined`;

exports[`yes-version-no-tabs > gets navigation root for /docs/api/version-1/page-5 1`] = `
{
  "authed": undefined,
  "canonicalSlug": undefined,
  "hidden": undefined,
  "icon": undefined,
  "id": "root..version-1.uv.section-3.page-5",
  "noindex": undefined,
  "orphaned": undefined,
  "pageId": "page-5.md",
  "slug": "docs/api/version-1/page-5",
  "title": "Page 5",
  "type": "page",
  "viewers": undefined,
}
`;

exports[`yes-version-no-tabs > gets navigation root for /docs/api/version-1/page-5 2`] = `"Version 1"`;

exports[`yes-version-no-tabs > gets navigation root for /docs/api/version-1/page-5 3`] = `undefined`;

exports[`yes-version-no-tabs > gets navigation root for /docs/api/version-1/section-1 1`] = `
{
  "redirect": "docs/api/version-1/section-1/page-1",
  "type": "redirect",
}
`;

exports[`yes-version-no-tabs > gets navigation root for /docs/api/version-1/version-1 1`] = `
{
  "authed": undefined,
  "canonicalSlug": undefined,
  "hidden": undefined,
  "icon": undefined,
  "id": "root..version-1.uv.section-3.page-6",
  "noindex": undefined,
  "orphaned": undefined,
  "pageId": "page-6.md",
  "slug": "docs/api/version-1/version-1",
  "title": "Page 6",
  "type": "page",
  "viewers": undefined,
}
`;

exports[`yes-version-no-tabs > gets navigation root for /docs/api/version-1/version-1 2`] = `"Version 1"`;

exports[`yes-version-no-tabs > gets navigation root for /docs/api/version-1/version-1 3`] = `undefined`;

exports[`yes-version-no-tabs > gets navigation root for /docs/api/version-2 1`] = `
{
  "redirect": "docs/api/version-2/page-7",
  "type": "redirect",
}
`;

exports[`yes-version-no-tabs > gets navigation root for /docs/api/version-2/version-1 1`] = `
{
  "authed": undefined,
  "canonicalSlug": undefined,
  "hidden": undefined,
  "icon": undefined,
  "id": "root..version-2.uv.section-5.page-9",
  "noindex": undefined,
  "orphaned": undefined,
  "pageId": "page-9.md",
  "slug": "docs/api/version-2/version-1",
  "title": "Page 9",
  "type": "page",
  "viewers": undefined,
}
`;

exports[`yes-version-no-tabs > gets navigation root for /docs/api/version-2/version-1 2`] = `"Version 2"`;

exports[`yes-version-no-tabs > gets navigation root for /docs/api/version-2/version-1 3`] = `undefined`;
